add commit to builds and logs
